[package]
name = "opcua"
version = "0.13.0" # OPCUARustVersion
description = "OPC UA client and server API"
authors = ["Adam Lock <locka99@gmail.com>"]
homepage = "https://github.com/locka99/opcua"
repository = "https://github.com/locka99/opcua"
license = "MPL-2.0"
keywords = ["opcua","opc","ua"]
categories = ["embedded","network-programming"]
readme = "../README.md"
documentation = "https://docs.rs/opcua/"
edition = "2021"

[lib]
name = "opcua"

[badges]
travis-ci = { repository = "locka99/opcua" }
appveyor = { repository = "locka99/opcua" }

[features]
default = ["server", "client"]
all = ["server", "client", "console-logging", "http"]
# This is for CI/CD testing on platforms with unresolved OpenSSL deps, don't use otherwise.
test-vendored-openssl = ["all", "vendored-openssl"]
# Server default settings
server = ["generated-address-space", "discovery-server-registration"]
# Client default settings
client = []
# Console logging just installs a logger that writes out to the screen, useful for general logging
console-logging = ["env_logger"]
# Includes all the code to populate the address space with the default node set. This is something that embedded
# systems may or may not require.
generated-address-space = []
# Allows a server to register itself with a local discovery server. It does so by becoming a client to the LDS,
# which brings in a dependency to opcua-client. Omitting the feature saves some memory.
discovery-server-registration = ["client"]
# OpenSSL can be compiled and statically linked to with this feature
vendored-openssl = ["openssl/vendored"]
# Servers might want to show a web server with metric / diagnostic info
http = ["actix-files", "actix-web"]

[dependencies]
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
# Enable deadlock_detection if there are any deadlocks in sync code

# parking_lot = { git = "https://github.com/SE-I-T-Digital/parking_lot.git", branch = "wasix" }
# parking_lot_core = { git = "https://github.com/SE-I-T-Digital/parking_lot.git", branch = "wasix" }
parking_lot = { version = "^10.0.0" }
parking_lot_core = { version = "^10.0.0" }
futures = "0.3"
tokio = { git = "https://github.com/wasix-org/tokio.git", branch="wasix-1.35.1", features = [ "io-util", "io-std","net", "rt",  "signal", "macros", "rt", "rt-multi-thread", "signal", "sync", "time"] }
# tokio-rustls = { git = "https://github.com/wasix-org/tokio-rustls.git", branch = "wasix" }
tokio-util = { git = "https://github.com/wasix-org/tokio.git" , branch="wasix-1.35.1",  features = ["codec"] }
tokio-macros = { git = "https://github.com/wasix-org/tokio.git" , branch="wasix-1.35.1" }
tokio-stream = { git = "https://github.com/wasix-org/tokio.git" , branch="wasix-1.35.1" }
lazy_static = "1.4.0"
regex = "1.7"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.9"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
bytes = "1.3"
url = "1.6"
bitflags = "2.4"
derivative = "2.2"
byteorder = "1.4"
base64 = "0.21"
uuid = { version = "1.2", features = ["v4"] }
openssl = "0.10"
openssl-sys = "0.9"
libc = "0.2"
foreign-types = "0.3"

[dependencies.rumqttc]
version = "0.23"
optional = true

[dependencies.env_logger]
version = "0.10"
optional = true

[dependencies.actix-web]
version = "4.4"
optional = true

[dependencies.actix-files]
version = "0.6"
optional = true

[dev-dependencies]
tempdir = "0.3"
serde_json = "1.0"